# project-handbook-cli

./: .codex-agent-V1P-0008.prompt.txt  .codex-agent-V1P-0009.prompt.txt  .codex-agent-V1P-0010.prompt.txt  .gitignore  CHANGELOG.md  README.md  mkdocs.yml  ph-parity-V1P-0028.done  ph-parity-V1P-0029.done  ph-parity-V1P-0030.done  ph-parity-V1P-0031.done  ph-parity-V1P-0032.done  ph-parity-V1P-0034.done  ph-parity-V1P-0042.done  ph-parity-V1P-0045.done  ph-parity-V1P-0046.done  ph-parity-V1P-0067.done  pyproject.toml  pytest.ini
cli_plan/: AI_AGENT_START_HERE.md  PARITY_CHECKLIST.md  README.md  backlog.json  backlog.md  due-diligence.json  project_handbook.config.json  session_logs.md  tasks.json  tasks_initiatives_bl_0001_bl_0004.json  tasks_v1_next.json  tasks_v1_parity.json
docs/: commands.md  concepts.md  decisions.md  evidence.md  index.md  layout.md  process.md  quickstart.md  releases.md  sprints.md  tasks.md  troubleshooting.md  validation.md  workflows.md
scripts/: orchestrate_plan.py  orchestrate_queue.py  spawn_worker.py
tests/: conftest.py  test_adr_add.py  test_adr_list.py  test_backlog_add.py  test_backlog_assign.py  test_backlog_assign_parity_v1p0034.py  test_backlog_list.py  test_backlog_list_parity_v1p0032.py  test_backlog_rubric_parity_v1p0035.py  test_backlog_rubric_stats.py  test_backlog_triage.py  test_backlog_triage_parity_v1p0033.py  test_check_all_parity_v1p0068.py  test_clean.py  test_clean_parity_v1p0066.py  test_cli_help.py  test_config_validation.py  test_daily.py  test_daily_make_parity.py  test_dashboard.py  test_decision_id_semantics.py  test_doctor.py  test_dr_add.py  test_end_session_session_end_artifacts.py  test_end_session_skip_codex.py  (+82 more)
(+287 files in other folders)
