[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "project-handbook-cli"
version = "0.1.0"
description = "Installed ph CLI for Project Handbook"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["packaging>=23.0"]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
ph = "ph.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ph"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
