[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "project-handbook"
version = "0.0.6"
description = "Installed ph CLI for Project Handbook"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["packaging>=23.0"]

[project.urls]
Repository = "https://github.com/Spenquatch/project-handbook-cli"

[project.optional-dependencies]
dev = ["build", "mkdocs>=1.6.0", "pytest", "ruff", "twine"]

[project.scripts]
ph = "ph.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ph"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["ph"]
